// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatterModule should format documents 1`] = `
Array [
  Object {
    "newText": "text",
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`FormatterModule should format documents 2`] = `
Array [
  FullTextDocument {
    "_content": "a {}",
    "_languageId": "bar",
    "_lineOffsets": undefined,
    "_uri": "foo",
    "_version": 1,
  },
  Object {
    "config": Object {
      "rules": Object {
        "indentation": Array [
          2,
        ],
        "no-missing-end-of-source-newline": true,
      },
    },
  },
]
`;

exports[`FormatterModule with client dynamic registration support, onInitialize should not request static registration 1`] = `
Object {
  "capabilities": Object {
    "documentFormattingProvider": false,
  },
}
`;

exports[`FormatterModule without client dynamic registration support, onInitialize should request static registration 1`] = `
Object {
  "capabilities": Object {
    "documentFormattingProvider": true,
  },
}
`;
